hphp/hack/test/typecheck/new_inference/transitive_error_3.php.like_types.exp
File "transitive_error_3.php", line 17, characters 6-7:
Invalid argument (Typing[4110])
File "transitive_error_3.php", line 10, characters 38-43:
Expected Inv<[unresolved]>
File "transitive_error_3.php", line 6, characters 20-25:
But got dynamic because it is an unenforceable type
